test/visibility/import/enablesUnqualified/multipleUnqualified/outerUseLimitsInnerImport-except-error.good
outerUseLimitsInnerImport-except-error.chpl:11: In function 'main':
outerUseLimitsInnerImport-except-error.chpl:12: error: 'y' undeclared (first use this function)
